Hackety hack (unfinished)

--- a/dist.ini
+++ b/dist.ini
@@ -19,6 +19,10 @@ DBD::SQLite=0
 
 DBI=0
 
+File::chdir=0
+
+SQL::Schema::Versioned=0
+
 [Prereqs / DevelopRecommends]
 ;!lint_prereqs assume-used "spec"
 Rinci=1.1.0
