--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,7 @@ name    = App-VerifyBackup
 
 [GenPericmdScript/GenPericmdScript::verify_backup]
 url=/App/VerifyBackup/verify_backup
+enable_log=1
 
 [@Author::PERLANCAR]
 :version=0.43
