--- a/dist.ini
+++ b/dist.ini
@@ -24,6 +24,5 @@ File::chdir=0
 
 SQL::Schema::Versioned=0
 
-[Prereqs / DevelopRecommends]
-;!lint_prereqs assume-used "spec"
-Rinci=1.1.0
+[Prereqs / DevelopSuggests]
+_SPEC::Rinci=1.1.0
