--- a/dist.ini
+++ b/dist.ini
@@ -24,5 +24,7 @@ File::chdir=0
 
 SQL::Schema::Versioned=0
 
-[Prereqs / DevelopSuggests]
-_SPEC::Rinci=1.1.0
+[Prereqs / DevelopX_spec]
+-phase=develop
+-relationship=x_spec
+Rinci=1.1.0
